--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,19 +20,37 @@ form {
 .two-grid-md {
   display: flex;
   flex-direction: column;
-  /*grid-template-columns: 100%;
-  grid-row-gap: 10px; */
+	padding: 5px;
 }
 
 input {
   padding: 6px 4px;
 }
 
+.two-grid-md input, .two-grid-md select {
+	margin: 10px 0;
+}
+
+.two-grid-md .radio-group input {
+	margin: 5px 10px;
+}
+
+fieldset {
+	margin: 0;
+	padding: 5px;
+	border: 0;
+}
+
 @media (min-width: 768px) {
+	input, select, .two-grid-md .radio-group input {
+		margin-top: 0;
+	}
+
   .two-grid-md {
   	display: grid;
     grid-template-columns: 50% 50%;
     grid-column-gap: 10px;
+		align-items: center;
     padding-right: 5%;
   }
   .two-grid-md label {
@@ -43,4 +61,8 @@ input {
   .two-grid-md input {
   	justify-self: start;
   }
+	
+	.two-grid-md label[for="recommend"] {
+		align-self: start;
+	}
 }
