--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,10 +35,15 @@ input, textarea {
 	margin: 5px 10px;
 }
 
-fieldset {
-	margin: 0;
-	padding: 5px;
-	border: 0;
+.checkbox-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.checkbox-group input {
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 #submit {
@@ -75,6 +80,12 @@ fieldset {
 	label[for="recommend"], label[for="message"] {
 		align-self: start;
 	}
+	
+	#improve-question {
+    text-align: right;
+    align-self: start;
+  }
+
 	label[for="message"] {
 	  padding-top: 12px;
 	}
