--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,8 @@ form {
 	background-color: #FAFAFA;
 	padding: 3.5% 5%;
 	border-radius: 4px;
+	max-width: 75%;
+	margin: 0 auto;
 }
 
 #title, #description {
@@ -13,7 +15,7 @@ form {
 }
 
 #description {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 /* grid is 1 columns @100% on mobile */
@@ -21,10 +23,16 @@ form {
   display: grid;
   grid-template-columns: repeat(auto-fit, 100%);
 	padding: 5px;
+	grid-row-gap: 5px;
 }
 
-input, textarea {
+input, textarea, select {
   padding: 6px 4px;
+	border-radius: 4px;
+}
+
+input {
+	border: solid 1px rgba(128,128,128,0.8);
 }
 
 .two-grid-md input, .two-grid-md select, .two-grid-md textarea {
